test/compilable/test4003.d
// COMPILED_IMPORTS: imports/test4003a.d
// PERMUTE_ARGS:

import imports.stdio4003;
void main(){}

