test/fail_compilation/test64.d
// PERMUTE_ARGS:

import std.stdio;

import imports.test64a;

int main(char[][] args)
{
    writefln(file1);
    return 0;
}

